# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: main.cpp  run_nn.cpp  train.cpp  xor_example.cpp
include/NeuralNet/: Activations.hpp  DataLoader.hpp  Layer.hpp  Loss.hpp  Network.hpp  Neuron.hpp  Utils.hpp
models/: README.md  hash.model
src/: Activations.cpp  DataLoader.cpp  Layer.cpp  Loss.cpp  Network.cpp  Neuron.cpp  Utils.cpp
tests/: test_network.cpp
